--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -14,8 +14,7 @@
               <h1 class="display-4 mb-4">
                 Property Searching Just Got So Easy
               </h1>
-              <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quas, asperiores eveniet vel nostrum magnam
-                voluptatum tempore! Consectetur, id commodi!</p>
+              <p class="lead">Input your search criteria!</p>
               <div class="search">
                 <form action="{% url 'search' %}">
                   <!-- Form Row 1 -->
@@ -87,7 +86,7 @@
                         </div>
                         <div class="card-body">
                           <div class="listing-heading text-center">
-                            <h4 class="text-primary">{{listing.title}}</h4>
+                              <h5 class="text-primary"><a href="{% url 'listing' listing.id %}">{{listing.title}}</a></h5>
                             <p>
                               <i class="fas fa-map-marker text-secondary"></i> {{listing.city}} {{listing.state}} {{listing.zipcode}}</p>
                           </div>
@@ -106,7 +105,7 @@
                           </div>
                           <hr>
                           <div class="row py-2 text-secondary">
-                            <div class="col-6">
+                            <div class="col-7">
                               <i class="fas fa-user"></i> {{listing.realtor}}</div>
                           </div>
                           <div class="row text-secondary pb-2">
@@ -121,7 +120,7 @@
               {% endfor %}
             {% else %}
               <div class="col-md-12">
-                <p>No Listing Availabe</p>
+                <p>No Listing Available</p>
               </div>
             {% endif %}
     
